--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,27 @@
     </properties>
     
     <dependencies>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+        - Web dependencies
+        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>    
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.9.RELEASE</version>
+            <scope>compile</scope>
+        </dependency> 
     </dependencies>
 
     <build>
@@ -30,8 +45,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
