--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,20 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <springframework.version>5.0.5.RELEASE</springframework.version>
     </properties>
     
     <dependencies>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+        - IOC dependencies
+        - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${springframework.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        
         <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
         - Web dependencies
         - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
@@ -32,10 +43,21 @@
         </dependency>    
         <dependency>
             <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
+            <artifactId>thymeleaf-spring5</artifactId>
             <version>3.0.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${springframework.version}</version>
             <scope>compile</scope>
-        </dependency> 
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${springframework.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
